// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Config precedence tests should append default copyright notice without any user config 1`] = `
Object {
  "differences": 0,
  "differencesDirs": 0,
  "differencesFiles": 0,
  "distinct": 0,
  "distinctDirs": 0,
  "distinctFiles": 0,
  "equal": 2,
  "equalDirs": 0,
  "equalFiles": 2,
  "left": 0,
  "leftDirs": 0,
  "leftFiles": 0,
  "right": 0,
  "rightDirs": 0,
  "rightFiles": 0,
  "same": true,
  "total": 2,
  "totalDirs": 0,
  "totalFiles": 2,
}
`;

exports[`Config precedence tests should use license text from cli and strategy from config file 1`] = `
Object {
  "differences": 0,
  "differencesDirs": 0,
  "differencesFiles": 0,
  "distinct": 0,
  "distinctDirs": 0,
  "distinctFiles": 0,
  "equal": 4,
  "equalDirs": 0,
  "equalFiles": 4,
  "left": 0,
  "leftDirs": 0,
  "leftFiles": 0,
  "right": 0,
  "rightDirs": 0,
  "rightFiles": 0,
  "same": true,
  "total": 4,
  "totalDirs": 0,
  "totalFiles": 4,
}
`;

exports[`Config precedence tests should use license text from cli and strategy from package config 1`] = `
Object {
  "differences": 0,
  "differencesDirs": 0,
  "differencesFiles": 0,
  "distinct": 0,
  "distinctDirs": 0,
  "distinctFiles": 0,
  "equal": 4,
  "equalDirs": 0,
  "equalFiles": 4,
  "left": 0,
  "leftDirs": 0,
  "leftFiles": 0,
  "right": 0,
  "rightDirs": 0,
  "rightFiles": 0,
  "same": true,
  "total": 4,
  "totalDirs": 0,
  "totalFiles": 4,
}
`;
